foundation-objs/main/default/objects/Auto_Renewal_Constraints__mdt/Auto_Renewal_Constraints__mdt.object-meta.xml
<CustomObject>
    <label>Auto Renewal Constraints</label>
    <pluralLabel>Auto Renewal Constraints</pluralLabel>
</CustomObject>