foundation-objs/main/default/objects/Auto_Renewal_Constraints__mdt/fields/Asset_Field__c.field-meta.xml
<CustomField>
    <fullName>Asset_Field__c</fullName>
    <label>Asset Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>