foundation-objs/main/default/objects/Auto_Renewal_Constraints__mdt/fields/Quote_Line_Item_Field__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Field__c</fullName>
    <label>Quote Line Item Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>