foundation-objs/main/default/objects/Auto_Renewal_Constraints__mdt/listViews/EINV_RC.listView-meta.xml
<ListView>
    <fullName>EINV_RC</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Asset_Field__c</columns>
    <columns>Display_Text__c</columns>
    <columns>Plan_Tier__c</columns>
    <columns>Quote_Line_Item_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>EINV RC</label>
</ListView>